<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/list_bg_color"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_color"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/faceImg"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/nameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="2dp"
            android:text="唐丽娅"
            android:textColor="@color/white"
            android:textSize="27sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="2dp"
                android:text="中国音乐学院"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="音乐教育"
                android:textColor="@color/white" />

        </LinearLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:src="@drawable/ic_launcher" />

            <ImageView
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:src="@drawable/ic_launcher" />

            <ImageView
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:src="@drawable/ic_launcher" />

            <ImageView
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:src="@drawable/add" />

        </GridLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <RelativeLayout
            android:id="@+id/loginItem1"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="1dp"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/recent_homework"
                android:textColor="@color/main_text_color" />

            <ImageView
                android:layout_width="18dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:src="@drawable/more_right" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/loginItem2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="1dp"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/message"
                android:textColor="@color/main_text_color" />

            <ImageView
                android:layout_width="18dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:src="@drawable/more_right" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/loginItem3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="1dp"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/collection"
                android:textColor="@color/main_text_color" />

            <ImageView
                android:layout_width="18dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:src="@drawable/more_right" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/loginItem4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="1dp"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/conceded"
                android:textColor="@color/main_text_color" />

            <ImageView
                android:layout_width="18dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:src="@drawable/more_right" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/loginItem5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="1dp"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/friends"
                android:textColor="@color/main_text_color" />

            <ImageView
                android:layout_width="18dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:src="@drawable/more_right" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/loginItem6"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/yueju_party"
                android:textColor="@color/main_text_color" />

            <ImageView
                android:layout_width="18dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:src="@drawable/more_right" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>